<resources>
    <string name="app_name">HKUnexus</string>
    <string name="title_home">Home</string>
    <string name="title_explore">Explore</string>
    <string name="title_my_events">My Events</string>
    <string name="title_my_groups">My Clubs</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_register_otp">RegisterOtpActivity</string>
    <string name="title_create">Create</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_group_landing">Club Details</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close  Navigation Drawer</string>
</resources>