<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_explore"
        android:icon="@drawable/ic_explore_black_24dp"
        android:title="@string/title_explore" />

    <item
        android:id="@+id/navigation_create"
        android:icon="@drawable/ic_create_black_24dp"
        android:title="@string/title_create" />

    <item
        android:id="@+id/navigation_my_events"
        android:icon="@drawable/ic_my_events_black_24dp"
        android:title="@string/title_my_events" />

    <item
        android:id="@+id/navigation_my_groups"
        android:icon="@drawable/ic_my_groups_black_24dp"
        android:title="@string/title_my_groups" />

<!--    <item-->
<!--        android:id="@+id/navigation_dashboard"-->
<!--        android:icon="@drawable/ic_dashboard_black_24dp"-->
<!--        android:title="@string/title_dashboard" />-->

<!--    <item-->
<!--        android:id="@+id/navigation_notifications"-->
<!--        android:icon="@drawable/ic_notifications_black_24dp"-->
<!--        android:title="@string/title_notifications" />-->

</menu>